--- a/src/main/resources/MarcialFernandez/GreenPlay/ListaDescargas.fxml
+++ b/src/main/resources/MarcialFernandez/GreenPlay/ListaDescargas.fxml
@@ -31,9 +31,14 @@
                   <Insets />
                </VBox.margin>
             </TableView>
-            <HBox prefHeight="35.0" prefWidth="115.0">
+            <HBox prefHeight="35.0" prefWidth="177.0">
                <children>
                   <Button fx:id="volver" mnemonicParsing="false" onAction="#volver" prefHeight="35.0" prefWidth="113.0" text="Volver" />
+                  <Button fx:id="delete" mnemonicParsing="false" onAction="#delete" prefHeight="35.0" prefWidth="113.0" text="Borrar">
+                     <HBox.margin>
+                        <Insets left="10.0" />
+                     </HBox.margin>
+                  </Button>
                </children>
             </HBox>
          </children>
